--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,32 @@
 * {
     background-color: bisque;
 }
+
 p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    text-align: middle;
+    text-align: center;
 }
+
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
     text-align: center;
+}
+
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    text-align: center;
+}
+li {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
